--- a/src/index.css
+++ b/src/index.css
@@ -24,17 +24,17 @@ code {
   box-sizing: border-box;
   border: 0.1rem solid #aaa;
   border-radius: 0.5rem;
-  color: #377E3F;
+  color: #1c529b;
   font-size: 2.5rem;
   font-weight: 500;
   text-align: center;
   margin: 0px 4px;
-  border-color:#377E3F;
+  border-color:#1c529b;
 
 }
 
 .otp-field__input:focus {
-  border-color:#377E3F;
+  border-color:#1c529b;
   
 }
 
